--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Thomas Nguyen</title>
     <link hred="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="Stylesheet" href="css\style.css">
+    <link rel="Stylesheet" href="css/style.css">
 </head>
 <body>
     <nav id="name">
