--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     </nav>
     <section>
         <h1> Thomas Nguyen </h1>
-        <p> 607 Chimney Oaks • Mableton, Georgia • 770 696 6789 • tn32168@uga.edu </p>
+        <p> Mableton, Georgia • tn32168@uga.edu </p>
     </section>
     <hr>
     <section class ="one-col">
