--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <nav>
         <h1> Thomas Nguyen </h1>
         <img src = "images\248564_340116_25_9002354.jpg " alt = "Thomas" width = "110" height = "150"  /> 
-        <p class = "address"> 607 Chimney Oaks • Mableton, Georgia • 770 696 6789 • tn32168@uga.edu </p>
+        <p class = "address"> Mableton, Georgia • tn32168@uga.edu </p>
         <p class = "tagline"> <em>An aspiring developer open to learn anything big or small, anytime anywhere</em> </p>
     </nav>
    
 </section>
 <hr>
-<section>
+<section id = "Education">
     <h2> Education </h2>
     <p> University of Georgia, Franklin College of Arts & Sciences, 2025, Computer science, 3.64 GPA, Algorithms, Software Engineering, Data Structures, Web Programming,  </p>
 </section>
