Made multiple changes
Used a separate VS studio window to keep up with changes in real time (GitHub is too slow with updating the changes I made)

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Thomas Nguyen</title>
     <link hred="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="Stylesheet" href="css/style.css">
+    <link rel="Stylesheet" href="css\style.css">
 </head>
 <body>
     <nav id="name">
         <p> Thomas Nguyen </p>
-     <p id="contact_link"><a href="contact.html">Contact Thomas</a>
+     <p id="contact_link"><a href="contact.html">Contact Thomas Nguyen</a>
     </nav>
 
 <section class=" splash">
@@ -24,9 +24,28 @@
    
 </section>
 <hr>
-<section id = "Education">
+<section id = "Education" class="honors">
     <h2> Education </h2>
-    <p> University of Georgia, Franklin College of Arts & Sciences, 2025, Computer science, 3.64 GPA, Algorithms, Software Engineering, Data Structures, Web Programming,  </p>
+<div>
+    <a href="https://www.franklin.uga.edu/"><img src="images\Arts and Sciences.png" alt="Franklin College" width="300" height="200"></a>
+    <p>
+        <strong>University of Georgia, Franklin College of Arts & Sciences </strong>
+</p>
+<P>Athens, GA</P>
+<p>Bachelor of Science in Computer Science</p>
+<p> <strong> Graduation Date:</strong>May 2025</p>
+<p><strong>GPA:</strong> 3.70/4.00</p>
+<p><strong>Relavant Courses:</strong></p>
+<ul>
+    <li>Algorithms</li>
+    <li>Software Engineering</li>
+    <li>Discrete Math</li>
+    <li>Data Structures</li>
+    <li>Theory of Computing</li>
+    <li>Web Programming</li>
+    <li>Systems Programming</li>
+</ul>
+</div>
 </section>
 <section>
     <h2> Honors and Awards </h2>
@@ -97,7 +116,7 @@
 </div>
 </section>
 <footer>
-    <p> &copy; <a href="index.html">Thomas Nguyen</a> &nbsp; <a href="https://www.linkedin.com/in/thomas-nguyen-b8b9ba221/"> <i class="fab fa-linkedin"></i> Thomas Nguyen</a> </p>  
+    <p> &copy; <a href="contact.html">Thomas Nguyen</a> &nbsp; <a href="https://www.linkedin.com/in/thomas-nguyen-b8b9ba221/"> <i class="fab fa-linkedin"></i> Thomas Nguyen</a> </p>  
   
 </footer>
 </body>
