--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav id="name">
-        <p> Thomas Nguyen </p>
+        <p id="name"> Thomas Nguyen </p>
      <p id="contact_link"><a href="contact.html">Contact Thomas Nguyen</a>
     </nav>
 
@@ -116,7 +116,7 @@
 </div>
 </section>
 <footer>
-    <p> &copy; <a href="contact.html">Thomas Nguyen</a> &nbsp; <a href="https://www.linkedin.com/in/thomas-nguyen-b8b9ba221/"> <i class="fab fa-linkedin"></i> Thomas Nguyen</a> </p>  
+    <p> &copy; <a href="contact.html">Thomas Nguyen</a> &nbsp; <a href="https://www.linkedin.com/in/thomas-nguyen-b8b9ba221/"> <i class="fab fa-linkedin"></i></a> </p>  
   
 </footer>
 </body>
